Mise en place de la section description

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="description">
+        Moi c'est Mouinou Latif etudiant en deuxième année d'université à Esgis.
+    </div>
 </body>
 </html>
