Mise en place de la section formation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="formations">
+        <ul>
+            <li>2011: Diplome CEP</li>
+            <li>2015: Diplome BEPC</li>
+            <li>2020: Diplome BAC</li>
+        </ul>
+    </div>
 </body>
 </html>
