Mise en place de la section competences

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="competences">
+        <ul>
+            <li>Administrateur réseau</li>
+            <li>Maitrise de la suite Microsoft</li>
+        </ul>
+    </div>
 </body>
 </html>
