Mise en place de la section associations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="associations">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero eum, dolorem nobis temporibus eaque aperiam repudiandae officiis nostrum non assumenda, quis, excepturi tenetur maxime quam animi maiores unde natus fugiat!
+    </div>
 </body>
 </html>
